# nbites

data/logs/: sync
src/man/: CMakeLists.txt  Man.cpp
src/man/behaviors/: Brain.py  CMakeLists.txt  GameController.py  PyConstants.cpp  SweetMoves.py
src/man/behaviors/headTracker/: HeadTracker.py  TrackingStates.py
src/man/behaviors/kickDecider/: KickDecider.py  kicks.py
src/man/behaviors/navigator/: NavStates.py  Navigator.py
src/man/behaviors/players/: .#GoalieStates.py  .#VisualGoalieStates.py  BrunswickStates.py  ChaseBallStates.py  CornerStates.py  (+10 more)
src/man/comm/: GameConnect.cpp  TeamConnect.cpp
src/man/config/: V5bottomCameraParams.txt  V5topCameraParams.txt  calibrationParams.txt  colorParams.txt
src/man/guardian/: GuardianModule.cpp  GuardianModule.h
src/man/image/: TranscriberModule.cpp  TranscriberModule.h
src/man/jointenactor/: JointEnactorModule.cpp  JointEnactorModule.h
src/man/led/: CMakeLists.txt
src/man/motion/: MotionModule.cpp
src/man/naiveball/: NaiveBallModule.cpp
src/man/obstacle/: ObstacleModule.cpp
src/man/support/: CameraCalibrate.cpp  CommDef.h
src/man/vision/: CMakeLists.txt  ColorLearner.cpp  ColorLearner.h  Edge.cpp  FrontEnd.cpp  FrontEnd.h  Hough.cpp  Hough.h  StatsColor.h  VisionModule.cpp  VisionModule.h
src/nbcross/: Statistics.h  StatisticsCross.h  main.cpp  nbfuncs.h  pkoch_defs.cpp  vision_defs.cpp
src/nbtool/: RUNnbtool-nobuild
src/share/cmake/: DebugConfig.cmake  DebugConfig.in  FindALCOMMON.cmake  SetOE_SYSROOT.cmake  atom.cmake
src/share/include/: Camera.h
src/share/messages/: CMakeLists.txt
(+14 files in other folders)
